[metadata]
name = django-rt-cdn
description = Django app for a CDN solution based on cf-workers-rt-cdn
long-description = file: README.md
long-description-content-type = text/markdown
author = Maciej Lech (Reef Technologies)
author-email = maciej.lech@reef.pl
home-page = https://github.com/reef-technologies/django-rt-cdn
license = BSD

[options]
zip_safe = false
python_requires = >=3.8
install_requires =
  Django>=2.2
setup_requires =
  setuptools_scm

[options.extras_require]
imagekit =
  django-imagekit~=4.0
ninja =
  django-imagekit~=4.0
  django-ninja~=0.10
  accept-types~=0.4

[check]
metadata = true
strict = true

[bdist_wheel]
universal = true

[flake8]
ignore = E501,W503,D100,D105,D202
per-file-ignores = __init__.py:F401,F403
exclude = */migrations/*,manage.py
max-line-length = 88
max-complexity = 10
doctests = 1

[isort]
line_length = 88
multi_line_output = 3
atomic = true
include_trailing_comma = true
force_grid_wrap = 0
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
skip_glob = */migrations/*
